# articler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile
.cargo/: config.toml
.gitea/workflows/: ci.yml  deploy.yml
.github/workflows/: ci.yml  release.yml
ci/: Dockerfile
crates/api/: Cargo.toml
crates/api/src/: app.rs  auth.rs  lib.rs  main.rs  models.rs  scraper.rs  token_storage.rs
crates/api/src/api/: fake_ui.rs  mod.rs  oauth.rs
crates/api/src/api/wallabag/: entries.rs  mod.rs  tags.rs
crates/api/tests/: api_test.rs  mobile_app_ui_stub.rs  oauth_test.rs
crates/api/tests/fixtures/: users.sql
crates/api/tests/json/: delete_entry_full.json  delete_tag_from_entry_unchanged.json  entries.json  entries_paging.json  get_all_tags.json  post_entry_tags_replace.json
crates/app_state/: Cargo.toml
crates/app_state/src/: lib.rs  token_storage.rs
crates/article_scraper/: Cargo.toml
crates/article_scraper/src/: error.rs  helpers.rs  html.rs  lib.rs  pdf.rs  scraper.rs
crates/article_scraper/src/snapshots/: article_scraper__scraper__tests__pdf_extraction-2.snap  article_scraper__scraper__tests__pdf_extraction.snap  article_scraper__scraper__tests__reading_time-2.snap  article_scraper__scraper__tests__reading_time-3.snap
crates/article_scraper/tests/: scraper.rs
crates/article_scraper/tests/snapshots/: scraper__pdf_extraction-2.snap  scraper__reading_time-2.snap  scraper__reading_time-3.snap
crates/auth/: Cargo.toml
crates/auth/src/: error.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: error.rs  lib.rs  main.rs
crates/db/: Cargo.toml
crates/db/src/: error.rs  lib.rs
crates/db/src/repository/: clients.rs  entries.rs  mod.rs  tags.rs  tokens.rs  users.rs
crates/db/tests/fixtures/: oauth.sql
crates/helpers/: Cargo.toml
crates/helpers/src/: error.rs  lib.rs
crates/result/: Cargo.toml
crates/result/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: app.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  scraper.rs  token_storage.rs
crates/server/src/rest/: mod.rs  oauth.rs
crates/server/src/rest/wallabag/: entries.rs  mod.rs  tags.rs
crates/server/src/web/: fake_ui.rs  mod.rs  setup.rs  template_data.rs  ui.rs
crates/server/static/: index.html  login.html
crates/server/static/css/: main.css
crates/server/tailwind/: input.css
crates/server/templates/: article.hbs  article_cards.hbs  articles_and_categories.hbs  base.hbs  categories.hbs  clients.hbs  fake_client_create.hbs  fake_client_create_result.hbs  fake_development.hbs  index.hbs  login.hbs  main.hbs  navigation.hbs  page.hbs  page_article.hbs  page_articles.hbs  page_clients.hbs  setup.hbs
crates/server/tests/: api_test.rs  mobile_app_ui_stub.rs  oauth_test.rs  setup_test.rs  web_ui_test.rs
crates/server/tests/articles/: joe_pass.html
crates/server/tests/fixtures/: entries.sql  users.sql
crates/server/tests/json/: archived_entries.json  create_entry_with_scraping.json  create_entry_with_scraping_real_article.json  delete_entry_full.json  delete_tag_from_entry_success.json  delete_tag_from_entry_unchanged.json  entries.json  entries_ordered_updated_at.json  entries_paging.json  patch_entry_add_tags.json  patch_entry_basic.json  patch_entry_replace_tags.json  post_entry_tags_add.json  post_entry_tags_replace.json  public_entries.json  starred_entries.json
crates/server/tests/snapshots/: api_test__post_entries_with_scraping_real_article-2.snap  api_test__post_entries_with_scraping_real_article-3.snap  api_test__post_entries_with_scraping_real_article.snap
crates/token_storage/: Cargo.toml
crates/token_storage/src/: error.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: error.rs  lib.rs
crates/wallabag_api/: Cargo.toml
crates/wallabag_api/src/: auth.rs  error.rs  lib.rs  models.rs  oauth.rs
crates/wallabag_api/src/wallabag/: entries.rs  mod.rs  tags.rs
html/: index.html
migrations/: 20250619114630_init.up.sql  20260205192557_refresh_token.up.sql  20260210141928_updated_at_constraint.up.sql  20260227020848_content_text_column.up.sql  20260313005121_fts5_entries.up.sql  20260313100939_remove_unique_client_name.up.sql  20260313102652_fts5_add_title.up.sql
src/: api.rs  app.rs  fake_ui.rs  helpers.rs  lib.rs  main.rs  middleware.rs  models.rs  oauth.rs  result.rs  scraper.rs  scrapper.rs  token_storage.rs
src/http/: api.rs  fake_ui.rs  mod.rs  oauth.rs
src/http/wallabag_api/: entries.rs  mod.rs  tags.rs
src/repository/: clients.rs  entries.rs  mod.rs  tags.rs  users.rs
src/storage/: mod.rs  repository.rs  token_storage.rs
tests/: api_test.rs  integration_test.rs  mobile_app_ui_stub.rs  oauth_test.rs
tests/fixtures/: entries.sql  oauth.sql
tests/json/: archived_entries.json  create_entry.json  create_entry_with_scrapping.json  delete_tag_by_id_success.json  delete_tags_by_label_success.json  entries.json  entries_ordered_updated_at.json  entries_paging.json  get_tags_for_entry_with_tags.json  patch_entry_replace_tags.json  public_entries.json  starred_entries.json
