[workspace]
resolver = "2"
members = [
    "crates/result",
    "crates/helpers",
    "crates/db",
    "crates/api",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
sqlx = { version = "0.8.6", features = ["migrate", "sqlite", "runtime-tokio", "chrono"] }
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.17"
url = { version = "2.5.7", features = ["serde"] }

result = { path = "crates/result" }
helpers = { path = "crates/helpers" }
db = { path = "crates/db" }
api = { path = "crates/api" }
cli = { path = "crates/cli" }

[profile.release]
strip = true
opt-level = "z"
lto = true
