[workspace]
resolver = "2"
members = [
    "crates/result",
    "crates/helpers",
    "crates/db",
    "crates/server",
    "crates/cli",
    "crates/article_scraper",
    "crates/types",
    "crates/app_state",
    "crates/token_storage",
    "crates/wallabag_api",
    "crates/auth",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
sqlx = { version = "0.8.6", features = ["migrate", "sqlite", "runtime-tokio", "chrono"] }
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.17"
url = { version = "2.5.7", features = ["serde"] }
serde_json = "1.0.145"
serde_with = "3.16.1"
log = "0.4.29"
rand = "0.10.0"
insta = "1.46.3"
snafu = "0.9.0"
argon2 = { version = "0.5.3", features = ["std"] }

result = { path = "crates/result" }
helpers = { path = "crates/helpers" }
db = { path = "crates/db" }
server = { path = "crates/server" }
cli = { path = "crates/cli" }
article_scraper = { path = "crates/article_scraper" }
types = { path = "crates/types" }
app_state = { path = "crates/app_state" }
token_storage = { path = "crates/token_storage" }
wallabag_api = { path = "crates/wallabag_api" }
auth = { path = "crates/auth" }

[profile.release]
strip = true
opt-level = "z"
lto = true

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

needless_pass_by_ref_mut = "warn"
str_to_string = "warn"

#unwrap_used = "warn" # TODO can't use it now only because of the test code, allow-unwrap-in-tests = true is not help for integration tests https://github.com/rust-lang/rust-clippy/issues/13981

dbg_macro = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
verbose_file_reads = "warn"
module_name_repetitions = "warn"

# Relaxations for pedantic lints that are too noisy
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_field_names = "allow"


[workspace.lints.rust]
rust_2024_compatibility = "warn"