[package]
name = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "articler"
path = "src/main.rs"

[dependencies]
result.workspace = true
db.workspace = true
helpers.workspace = true
sqlx.workspace = true
actix-web.workspace = true
actix-web-httpauth = "0.8.2"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-http = "3.11.2"
actix-service = "2.0.3"
actix-utils = "3.0.1"
serde.workspace = true
serde_json = "1.0.145"
serde_with = "3.16.1"
chrono.workspace = true
tokio.workspace = true
thiserror.workspace = true
url.workspace = true
rand = "0.9.2"
slug = "0.1.6"
env_logger = "0.11.8"
dom_smoothie = "0.15.0"
reqwest = { version = "0.13.1", features = ["socks"] }
dateparser = "0.2.1"

[dev-dependencies]
serde-json-assert = "0.4.0"
proptest = "1.4"
urlencoding = "2.1"
regex = "1.11"
wiremock = "0.6.5"
