[package]
name = "article_scraper"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
result.workspace = true
types.workspace = true
chrono.workspace = true
thiserror.workspace = true
log.workspace = true
dom_smoothie = "0.15.0"
dateparser = "0.2.1"
reqwest = { version = "0.13.1", features = ["socks"] }
url = { version = "2.5.7" }
icu_segmenter = "2.1.2"
mupdf = "0.5"

[dev-dependencies]
insta.workspace = true
tokio.workspace = true
wiremock = "0.6.5"

