[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "articlerctl"
path = "src/main.rs"

[dependencies]
result.workspace = true
db.workspace = true
helpers.workspace = true
clap = { version = "4.5.57", features = ["derive"] }
chrono.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror.workspace = true
email_address = "0.2.9"
