[package]
name = "db"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
chrono.workspace = true
types.workspace = true
thiserror.workspace = true
url.workspace = true
snafu.workspace = true
indexmap = "2.12.1"

[dev-dependencies]
tokio.workspace = true
