[package]
name = "server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "articler"
path = "src/main.rs"

[dependencies]
result.workspace = true
db.workspace = true
app_state.workspace = true
helpers.workspace = true
article_scraper.workspace = true
types.workspace = true
wallabag_api.workspace = true
sqlx.workspace = true
actix-web.workspace = true
snafu.workspace = true
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-http = "3.11.2"
actix-service = "2.0.3"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
log.workspace = true
url.workspace = true
rand.workspace = true
env_logger = "0.11.8"
actix-web-static-files = { version = "4.1", features = ["static-files-03"] }
static-files = "0.3.1"
handlebars = { version = "6.4.0", features = ["dir_source"]}

[build-dependencies]
static-files = "0.3.1"

[dev-dependencies]
insta.workspace = true
serde-json-assert = "0.4.0"
regex = "1.11"
wiremock = "0.6.5"
scraper = "0.25.0"
rstest = "0.26.1"
rstest_reuse = "0.7.0"

