[package]
name = "token_storage"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
db.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
chrono.workspace = true
rand.workspace = true
snafu.workspace = true